--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,7 +509,7 @@ section {
   font-weight: 600;
 }
 .portfolio .portfolio-wrap .portfolio-info p {
-  color: #45505b;
+  color: black;
   font-size: 14px;
   padding: 0;
   margin: 0;
